Added fonts and font variables

--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -2,4 +2,9 @@
   /* Colors */
 
   /* Base */
+  --font-family-primary: 'Dm Serif Display';
+  --font-family-secondary: 'Jost';
+  --line-height-heading: 1.22;
+  --line-height-base: 1.5;
+  --font-size-base: 1.8rem;
 }
