--- a/src/sass/base/default.scss
+++ b/src/sass/base/default.scss
@@ -10,8 +10,12 @@ html {
 }
 
 body {
+  font-family: var(--font-family-secondary), sans-serif;
+  font-size: var(--font-size-base);
+  line-height: var(--line-height-base);
   margin: 0;
   padding: 0;
+  min-height: 100vh;
 }
 
 img {
