--- a/src/sass/base/default.scss
+++ b/src/sass/base/default.scss
@@ -13,6 +13,7 @@ body {
   font-family: var(--font-family-secondary), sans-serif;
   font-size: var(--font-size-base);
   line-height: var(--line-height-base);
+  color: var(--color-base);
   margin: 0;
   padding: 0;
   min-height: 100vh;
