Added Button component and new color

--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -3,6 +3,8 @@
   --color-dark-190: #292f36;
   --color-dark-310: #4d5053;
 
+  --color-gray-750: #c0c0c059;
+
   --color-white-100: #ffffff;
 
   --color-golden-630: #cda274;
