--- a/src/sass/base/fonts.scss
+++ b/src/sass/base/fonts.scss
@@ -2,9 +2,9 @@
   font-family: 'Dm Serif Display';
   font-style: normal;
   font-weight: 400;
-  src: url('../fonts/Dm-serif-display/dm-serif-display-v11-latin-regular.woff')
+  src: url('@fonts/Dm-serif-display/dm-serif-display-v11-latin-regular.woff')
       format('woff'),
-    url('../fonts/Dm-serif-display/dm-serif-display-v11-latin-regular.woff2')
+    url('@fonts/Dm-serif-display/dm-serif-display-v11-latin-regular.woff2')
       format('woff2');
 }
 
@@ -12,16 +12,15 @@
   font-family: 'Dm Serif Display';
   font-style: italic;
   font-weight: 400;
-  src: url('../fonts/Dm-serif-display/dm-serif-display-v11-latin-italic.woff')
+  src: url('@fonts/Dm-serif-display/dm-serif-display-v11-latin-italic.woff')
       format('woff'),
-    url('../fonts/Dm-serif-display/dm-serif-display-v11-latin-italic.woff2')
-      format('woff2');
+    url('@fonts/Dm-serif-display/dm-serif-display-v11-latin-italic.woff2') format('woff2');
 }
 
 @font-face {
   font-family: 'Jost';
   font-style: normal;
   font-weight: 400;
-  src: url('../fonts/Jost/jost-v14-latin-regular.woff') format('woff'),
-    url('../fonts/Jost/jost-v14-latin-regular.woff2') format('woff2');
+  src: url('@fonts/Jost/jost-v14-latin-regular.woff') format('woff'),
+    url('@fonts/Jost/jost-v14-latin-regular.woff2') format('woff2');
 }
