Added Navbar styles and delay animation mixin

--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -10,6 +10,8 @@
   --color-golden-630: #cda274;
   --color-golden-940: #f4f0ec;
 
+  --color-rgba-dark: rgba(10, 10, 10, 0.7);
+
   /* Base */
   --color-primary: var(--color-golden-630);
   --color-secondary: var(--color-dark-190);
