--- a/src/sass/mixins/index.scss
+++ b/src/sass/mixins/index.scss
@@ -1,5 +1,5 @@
 @import 'media-query';
 @import 'flex-center';
-@import 'reset-list-styles';
 @import 'typography-styles';
 @import 'delay-childs-animation';
+@import 'reset-default-styles';
