--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -3,6 +3,8 @@
 .footer {
   display: grid;
   gap: 5rem;
+  max-width: 120rem;
+  padding: 0 4rem 4rem;
 
   @include media-query('md') {
     gap: 17.4rem;
@@ -10,8 +12,7 @@
 
   &__links-wrapper {
     display: grid;
-    gap: 2rem;
-    max-width: 50rem;
+    max-width: 32rem;
 
     @include media-query('md') {
       gap: 5rem;
@@ -36,24 +37,92 @@
     @include reset-link-style;
   }
 
-  &__title-chevron {
-    // asdas
+  &__description {
+    margin: 1.8rem 0 3.1rem;
+  }
 
-    @include media-query('md') {
-      display: none;
-    }
+  &__social-links {
+    align-items: center;
+    display: flex;
+    gap: 5.4rem;
+  }
+
+  &__copyright {
+    @include flex-center;
   }
 }
 
 .page-links {
-  &__links-list {
+  &__button {
+    background-color: unset;
+    border: unset;
+    max-width: 20rem;
+    padding: 0;
+    width: 100%;
+
+    @include media-query('md') {
+      cursor: default;
+      max-width: unset;
+    }
+  }
+
+  &__title {
+    align-items: center;
+    display: flex;
+    justify-content: space-between;
+    margin: 1rem 0;
+
+    @include heading-styles('small', $weight: 400);
+
+    @include media-query('md') {
+      margin: 0 0 1.8rem;
+    }
+    @include media-query('lg') {
+      margin: 0 0 3.4rem;
+    }
+  }
+
+  &__chevron-icon {
+    transform: rotate(0);
+    transition: 0.25s transform ease;
+    @include media-query('md') {
+      display: none;
+    }
+
+    &--expanded {
+      transform: rotate(90deg);
+    }
+  }
+
+  &__list {
     display: grid;
     gap: 2rem;
+    max-height: 0;
+    opacity: 0;
+    transform: translateX(-100%);
+    transition: all 0.25s cubic-bezier(0, 1, 0, 1);
+
+    @include media-query('md') {
+      max-height: unset;
+      opacity: 1;
+      transform: translateX(0%);
+    }
+
+    &--expanded {
+      max-height: 100rem;
+      opacity: 1;
+      transform: translateX(0%);
+      transition: all 0.25s cubic-bezier(1, 0, 1, 0);
+    }
+  }
+
+  &__contact-text {
+    margin: 0;
   }
 }
 
 .footer__social-links,
-.page-links__links-list {
+.page-links__list {
   @include reset-list-style;
 }
 
