Added page layout and couple of style mixins

--- a/src/sass/mixins/index.scss
+++ b/src/sass/mixins/index.scss
@@ -3,3 +3,5 @@
 @import 'typography-styles';
 @import 'delay-childs-animation';
 @import 'reset-default-styles';
+@import 'container-width';
+@import 'padding-axis';
