--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -4,9 +4,11 @@
   display: flex;
   flex-direction: column;
   gap: 5rem;
+  padding-bottom: 2rem;
 
   @include media-query('md') {
     gap: 17.4rem;
+    padding-bottom: 4.6rem;
   }
 
   &__links-wrapper {
