--- a/src/components/CustomLink/CustomLink.module.scss
+++ b/src/components/CustomLink/CustomLink.module.scss
@@ -1,6 +1,23 @@
 @import '../../sass/index';
 
-.link {
+.circle-link {
+  background: var(--color-tertiary);
+  border-radius: 50%;
+
+  @include flex-center;
+
+  &__small {
+    height: 5.2rem;
+    width: 5.2rem;
+  }
+
+  &__large {
+    height: 7rem;
+    width: 7rem;
+  }
+}
+
+.arrow-link {
   align-items: center;
   display: inline-flex;
   height: 1.8rem;
@@ -8,7 +25,7 @@
 
   @include body-styles('small', $weight: 600);
 
-  &__arrow {
+  &__icon {
     padding-left: 1.2rem;
     stroke: var(--color-primary);
     width: auto;
