Added News card component and changed images

--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -6,6 +6,7 @@
   --color-gray-750: #c0c0c059;
 
   --color-white-100: #ffffff;
+  --color-white-910: #e7e7e7;
 
   --color-golden-630: #cda274;
   --color-golden-940: #f4f0ec;
@@ -22,7 +23,7 @@
   --font-family-secondary: 'Jost';
   --line-height-heading: 1.22;
   --line-height-base: 1.5;
-  --font-size-base: 1.8rem;
+  --font-size-base: 1.6rem;
 
   --container-width: 1200px;
 }
