--- a/src/layouts/MainLayout/MainLayout.module.scss
+++ b/src/layouts/MainLayout/MainLayout.module.scss
@@ -6,6 +6,7 @@
   &__hero {
     margin-inline: auto;
     max-width: 1920px;
+    padding-bottom: 20rem;
     width: 100%;
   }
 
@@ -15,6 +16,10 @@
 
     @include media-query('sm') {
       @include padding-x(4rem);
+    }
+
+    @include media-query('xl') {
+      padding: 0;
     }
   }
 }
