Fixed mixin imports

--- a/src/components/CollapsibleV2/CollapsibleV2.module.scss
+++ b/src/components/CollapsibleV2/CollapsibleV2.module.scss
@@ -1,4 +1,4 @@
-@import '../../sass/index';
+@import '../../sass/mixins/index.scss';
 
 .chevron {
   border-bottom: 1px solid var(--color-primary);
