--- a/src/components/NewsCard/NewsCard.module.scss
+++ b/src/components/NewsCard/NewsCard.module.scss
@@ -1,4 +1,4 @@
-@import '../../sass/mixins/index.scss';
+@import '../../sass/mixins/index';
 
 .news-card {
   border: 1px solid var(--color-white-910);
