Fixed Custom layout

--- a/src/components/SectionTestimonials/SectionTestimonials.module.scss
+++ b/src/components/SectionTestimonials/SectionTestimonials.module.scss
@@ -1,4 +1,4 @@
-@import '../../sass/mixins/index.scss';
+@import '../../sass/mixins/index';
 
 .testimonials {
   background-color: var(--color-tertiary);
