--- a/src/components/TestimonialCard/TestimonialCard.module.scss
+++ b/src/components/TestimonialCard/TestimonialCard.module.scss
@@ -1,4 +1,4 @@
-@import '../../sass/mixins/index.scss';
+@import '../../sass/mixins/index';
 
 .testimonial-card {
   background: var(--color-white-100);
