--- a/src/layouts/CustomLayout/CustomLayout.module.scss
+++ b/src/layouts/CustomLayout/CustomLayout.module.scss
@@ -1,5 +1,14 @@
 @import '../../sass/index';
 
-.custom-layout__section {
+.custom-layout {
   width: 100%;
+
+  &__section-wide {
+    margin-inline: auto;
+    max-width: 1920px;
+  }
+
+  &__section {
+    @include container-width;
+  }
 }
