--- a/src/components/SectionHomeNews/SectionHomeNews.module.scss
+++ b/src/components/SectionHomeNews/SectionHomeNews.module.scss
@@ -1,17 +1,23 @@
 @import '../../sass/mixins/index';
 
-.join-team {
-  margin: 0 auto;
-  max-width: 81.1rem;
-  text-align: center;
+.news {
+  &__text-container {
+    margin: 0 auto;
+    max-width: 73.7rem;
+    text-align: center;
+  }
 
   &__title {
     @include heading-styles('large', $weight: 400);
   }
 
   &__description {
-    @include padding-y($top: 1.2rem, $bottom: 5.2rem);
+    @include padding-y($top: 0.8rem, $bottom: 5rem);
     @include body-styles('large');
+
+    @include media-query('md') {
+      @include padding-y($top: 0.8rem, $bottom: 5.2rem);
+    }
   }
 
   &__cards-container {
