--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -9,6 +9,10 @@
   --color-white-100: #ffffff;
   --color-white-910: #e7e7e7;
 
+  --color-black-0: #000000;
+
+  --color-red-50: #ff0000;
+
   --color-golden-630: #cda274;
   --color-golden-940: #f4f0ec;
 
