Added remove num arrows mixin, Text Area styles

--- a/src/components/TextArea/TextArea.module.scss
+++ b/src/components/TextArea/TextArea.module.scss
@@ -1,5 +1,18 @@
 @import '../../sass/mixins/index';
 
-.text-area {
-  //
+.text-input {
+  @include wrapper;
+
+  &__field {
+    @include field;
+    @include focus;
+
+    &--has-error {
+      @include has-error;
+    }
+  }
+
+  &__error-msg {
+    @include error-msg;
+  }
 }
