Added styles for Team person card

--- a/src/components/TeamPersonCard/TeamPersonCard.module.scss
+++ b/src/components/TeamPersonCard/TeamPersonCard.module.scss
@@ -1,1 +1,78 @@
 @import '../../sass/mixins/index';
+
+.employee-card {
+  background: var(--color-white-100);
+  cursor: pointer;
+  height: 43.3rem;
+  position: relative;
+  text-align: center;
+  width: 28.4rem;
+
+  &__wrapper {
+    height: 100%;
+    transform-style: preserve-3d;
+    transition: transform 0.5s ease;
+    width: 100%;
+  }
+
+  &:hover > &__wrapper {
+    transform: rotateY(180deg);
+  }
+}
+
+.card-back {
+  background: var(--color-tertiary);
+  min-height: 100%;
+  min-width: 100%;
+  padding: 7rem 2.8rem;
+  transform: rotateY(180deg);
+
+  &__name {
+    font-family: var(--font-family-primary), sans-serif;
+    font-size: 2rem;
+
+    @include media-query('md') {
+      font-size: 2.5rem;
+    }
+  }
+
+  &__profession-country {
+    @include body-styles('small');
+  }
+
+  &__phone,
+  &__email {
+    @include body-styles('small');
+  }
+
+  &__name,
+  &__profession-country,
+  &__phone,
+  &__email {
+    margin: 0;
+    max-width: 28.4rem;
+    word-wrap: break-word;
+  }
+}
+
+.card-front {
+  object-fit: cover;
+}
+
+.card-front,
+.card-back {
+  backface-visibility: hidden;
+  border-radius: 30px;
+  left: 0;
+  position: absolute;
+  top: 0;
+}
+
+.social-media {
+  display: flex;
+  gap: 3.6rem;
+  justify-content: center;
+  list-style: none;
+  margin: 0;
+  padding: 6.6rem 0;
+}
