--- a/src/pages/About/About.module.scss
+++ b/src/pages/About/About.module.scss
@@ -1,6 +1,6 @@
 @import '../../sass/mixins/index';
 
-.section-workflow {
+.section__workflow {
   @include padding-y($top: 10rem, $bottom: 10rem);
 
   @include media-query('md') {
