Added Section Message component

--- a/src/pages/About/About.module.scss
+++ b/src/pages/About/About.module.scss
@@ -7,3 +7,11 @@
     @include padding-y($top: 20rem, $bottom: 17.3rem);
   }
 }
+
+.section__message-form {
+  @include padding-y($top: 10rem, $bottom: 10rem);
+
+  @include media-query('md') {
+    @include padding-y($top: 21.3rem, $bottom: 13.5rem);
+  }
+}
