--- a/src/components/SectionMessageForm/SectionMessageForm.module.scss
+++ b/src/components/SectionMessageForm/SectionMessageForm.module.scss
@@ -3,6 +3,11 @@
 .section__message {
   margin: 0 auto;
   max-width: 79.6rem;
+  @include padding-y($top: 10rem, $bottom: 10rem);
+
+  @include media-query('md') {
+    @include padding-y($top: 21.3rem, $bottom: 13.5rem);
+  }
 
   &__title {
     margin: 0 0 7.7rem;
