--- a/src/components/SectionCommaV1/SectionCommaV1.module.scss
+++ b/src/components/SectionCommaV1/SectionCommaV1.module.scss
@@ -55,7 +55,7 @@
     font-style: italic;
     margin: 2.7rem 0 3.4rem;
 
-    @include heading-styles('medium', $weight: 400);
+    @include heading-styles('medium');
   }
 
   &__author {
