--- a/src/components/SectionEstimate/SectionEstimate.module.scss
+++ b/src/components/SectionEstimate/SectionEstimate.module.scss
@@ -20,7 +20,7 @@
   }
 
   &__title {
-    @include heading-styles('large', $weight: 400);
+    @include heading-styles('large');
   }
 
   &__description {
