--- a/src/components/SectionTeamCards/SectionTeamCards.module.scss
+++ b/src/components/SectionTeamCards/SectionTeamCards.module.scss
@@ -13,7 +13,7 @@
 
   &__title {
     margin: 0;
-    @include heading-styles('large', $weight: 400);
+    @include heading-styles('large');
   }
 
   &__wrapper {
