--- a/src/components/SectionAboutWorkflow/SectionAboutWorkflow.module.scss
+++ b/src/components/SectionAboutWorkflow/SectionAboutWorkflow.module.scss
@@ -40,7 +40,7 @@
   }
 
   &__title {
-    @include heading-styles('large', $weight: 400);
+    @include heading-styles('large');
   }
 
   &__description {
