--- a/src/components/SectionCommaV2/SectionCommaV2.module.scss
+++ b/src/components/SectionCommaV2/SectionCommaV2.module.scss
@@ -32,7 +32,7 @@
     font-style: italic;
     margin: 0;
     padding: 1.6rem 1rem 0;
-    @include heading-styles('small', $weight: 400, $color: var(--color-primary));
+    @include heading-styles('small', $color: var(--color-primary));
 
     @include media-query('md') {
       padding: 0.8rem 0 0;
