--- a/src/components/TestimonialCard/TestimonialCard.module.scss
+++ b/src/components/TestimonialCard/TestimonialCard.module.scss
@@ -26,7 +26,7 @@
   }
 
   &__name {
-    @include heading-styles('small', $weight: 400, $line-height: var(--line-height-base));
+    @include heading-styles('small', $line-height: var(--line-height-base));
   }
 
   &__comment {
