--- a/src/components/CollapsibleV1/CollapsibleV1.module.scss
+++ b/src/components/CollapsibleV1/CollapsibleV1.module.scss
@@ -1,3 +1,5 @@
+@import '../../sass/mixins/index.scss';
+
 .chevron {
   border: 1px solid var(--color-primary);
   border-radius: 1.8rem;
@@ -9,12 +11,7 @@
   }
 
   &__title {
-    align-items: center;
-    cursor: pointer;
-    display: flex;
-    justify-content: space-between;
-    list-style: none;
-    user-select: none;
+    @include collapsible-title;
 
     @include body-styles('small', $color: var(--color-secondary), $weight: 600);
   }
@@ -33,10 +30,8 @@
   }
 
   &__text {
-    cursor: default;
-    margin: 0;
-    max-width: 88%;
     padding: 1.5rem 0 1rem;
-    @include body-styles('large');
+
+    @include collapsible-text;
   }
 }
