Added Comma component and adjusted comma Sections

--- a/src/components/SectionCommaV2/SectionCommaV2.module.scss
+++ b/src/components/SectionCommaV2/SectionCommaV2.module.scss
@@ -17,8 +17,8 @@
   }
 
   &__icon {
+    color: var(--color-primary);
     height: 4rem;
-    margin: 0 auto;
     transform: rotate(180deg);
     width: 6.4rem;
 
