--- a/src/components/SectionServiceWorkflow/SectionServiceWorkflow.module.scss
+++ b/src/components/SectionServiceWorkflow/SectionServiceWorkflow.module.scss
@@ -2,9 +2,21 @@
 
 .workflow {
   background-color: var(--color-tertiary);
-  border-radius: 70px;
-  padding: 16rem 11.6rem;
+  border-radius: 30px;
+  padding: 6rem 2rem;
   text-align: center;
+
+  @include media-query('md') {
+    border-radius: 70px;
+    padding: 16rem 3rem;
+  }
+  @include media-query('lg') {
+    @include padding-x(5rem);
+  }
+
+  @include media-query('xl') {
+    @include padding-x(11.6rem);
+  }
 
   &__title {
     margin: 0;
@@ -12,9 +24,13 @@
   }
 
   &__description {
-    margin: 1.5rem auto 10rem;
+    margin: 1.5rem auto 7rem;
     max-width: 80.2rem;
     @include body-styles('large');
+
+    @include media-query('md') {
+      margin-bottom: 10rem;
+    }
   }
 }
 
@@ -24,10 +40,15 @@
 }
 
 .workflow-step {
-  display: flex;
+  display: grid;
   gap: 5.1rem;
 
   @include media-query('md') {
+    display: flex;
+    gap: 3rem;
+  }
+
+  @include media-query('xl') {
     gap: unset;
     justify-content: space-between;
   }
@@ -37,10 +58,25 @@
   }
 
   &__image {
-    border-radius: 0 123px 0 326.5px;
-    max-width: 45.3rem;
-    min-height: 48.5rem;
+    border-radius: 0 72px 0 105.5px;
+    margin: 0 auto;
+    max-width: 80%;
+    min-height: 80%;
     object-fit: cover;
+
+    @include media-query('md') {
+      border-radius: 0 123px 0 193px;
+      margin: unset;
+      max-width: 50%;
+      min-height: 50%;
+      object-fit: cover;
+      order: -1;
+    }
+    @include media-query('lg') {
+      border-radius: 0 123px 0 326.5px;
+      max-width: 45.3rem;
+      min-height: 48.5rem;
+    }
   }
 }
 
@@ -48,7 +84,12 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  margin: 0 auto;
   max-width: 45.6rem;
+
+  @include media-query('md') {
+    margin: unset;
+  }
 
   &__icon-container {
     align-items: center;
@@ -56,17 +97,35 @@
     justify-content: space-between;
   }
 
+  &__icon {
+    max-width: 8.3rem;
+    width: 30%;
+
+    @include media-query('md') {
+      max-width: unset;
+      width: unset;
+    }
+  }
+
   &__number {
     color: var(--color-white-100);
     font-family: var(--font-family-primary), sans-serif;
-    font-size: 12rem;
-    line-height: --line-height-heading;
+    font-size: 8rem;
+    line-height: var(--line-height-heading);
     margin: 0;
+
+    @include media-query('md') {
+      font-size: 12rem;
+    }
   }
 
   &__title {
-    margin: 5.8rem 0 1.1rem;
+    margin: 5% 0 1.1rem;
     @include heading-styles('medium');
+
+    @include media-query('md') {
+      margin-top: 5.8rem;
+    }
   }
 
   &__description {
