--- a/src/components/VideoModal/VideoModal.module.scss
+++ b/src/components/VideoModal/VideoModal.module.scss
@@ -5,11 +5,29 @@
   background-size: cover;
   border: unset;
   border-radius: 70px;
-  height: 37.4rem;
+  height: 25rem;
   overflow: hidden;
   padding: 0;
   position: relative;
   width: 100%;
+
+  @include media-query('md') {
+    height: 37.4rem;
+  }
+
+  &__play-icon-container {
+    background: var(--color-white-100);
+    border-radius: 50%;
+    height: 10rem;
+    margin: 0 auto;
+    width: 10rem;
+    @include flex-center;
+
+    @include media-query('xl') {
+      height: 13.2rem;
+      width: 13.2rem;
+    }
+  }
 }
 
 .modal {
