Added Glimpse of Portfolio section

--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -7,6 +7,7 @@
   --color-gray-750: #c0c0c059;
 
   --color-white-100: #ffffff;
+  --color-white-810: #cecece;
   --color-white-910: #e7e7e7;
 
   --color-black-0: #000000;
