--- a/src/components/BenefitsOrderedList/BenefitsOrderedList.module.scss
+++ b/src/components/BenefitsOrderedList/BenefitsOrderedList.module.scss
@@ -6,7 +6,7 @@
     position: relative;
 
     &:first-child::after {
-      border: 1px solid #cecece;
+      border: 1px solid var(--color-white-810);
       content: '';
       height: 72%;
       position: absolute;
