--- a/src/pages/HomePage/HomePage.module.scss
+++ b/src/pages/HomePage/HomePage.module.scss
@@ -7,3 +7,11 @@
     margin: 20.2rem 0 13.5rem;
   }
 }
+
+.section-achievments {
+  margin: 10rem auto;
+
+  @include media-query('lg') {
+    margin: 15rem auto 20rem;
+  }
+}
