--- a/src/components/ProjectCard/ProjectCard.module.scss
+++ b/src/components/ProjectCard/ProjectCard.module.scss
@@ -1,25 +1,13 @@
 @import '../../sass/mixins/index';
 
 .project-card__bottom-container {
-  align-items: center;
-  display: flex;
-  justify-content: space-between;
-  margin-top: 1rem;
-
-  @include media-query('md') {
-    margin-top: 2.4rem;
-  }
+  @include text-container;
 }
 
 .project-card__title {
-  @include heading-styles('small');
+  @include card-title;
 }
 
 .project-card__category {
-  @include body-styles('large');
-}
-
-.project-card__category,
-.project-card__title {
-  margin: 0;
+  @include card-category;
 }
