--- a/src/components/SectionProjects/SectionProjects.module.scss
+++ b/src/components/SectionProjects/SectionProjects.module.scss
@@ -7,15 +7,23 @@
 }
 
 .projects {
-  display: grid;
-  gap: 3rem;
-  margin: 6.1rem 0;
+  margin-bottom: 15rem;
 
   @include media-query('md') {
-    grid-auto-flow: column;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: 61.6rem 29.6rem 61.6rem 61.6rem 29.6rem 61.6rem;
-    row-gap: 3.5rem;
+    margin-bottom: 20rem;
+  }
+
+  &__cards {
+    display: grid;
+    gap: 3rem;
+    margin: 6.1rem 0;
+
+    @include media-query('md') {
+      grid-auto-flow: column;
+      grid-template-columns: repeat(2, 1fr);
+      grid-template-rows: 61.6rem 29.6rem 61.6rem 61.6rem 29.6rem 61.6rem;
+      row-gap: 3.5rem;
+    }
   }
 }
 
