--- a/src/components/VideoModal/VideoModal.module.scss
+++ b/src/components/VideoModal/VideoModal.module.scss
@@ -32,7 +32,7 @@
 
 .modal {
   backdrop-filter: blur(6px);
-  background: rgba(28, 28, 28, 0.19);
+  background: var(--modal-overlay-color);
   height: 100%;
   left: 0;
   padding: 0 2rem;
