--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -5,6 +5,7 @@
   --color-dark-310: #4d5053;
 
   --color-gray-750: #c0c0c059;
+  --color-gray-110: #1c1c1c30;
 
   --color-white-100: #ffffff;
   --color-white-810: #cecece;
@@ -24,6 +25,8 @@
   --color-secondary: var(--color-dark-190);
   --color-tertiary: var(--color-golden-940);
   --color-base: var(--color-dark-310);
+
+  --modal-overlay-color: var(--color-gray-110);
 
   --font-family-primary: 'Dm Serif Display';
   --font-family-secondary: 'Jost';
