--- a/src/sass/mixins/media-query.scss
+++ b/src/sass/mixins/media-query.scss
@@ -14,3 +14,9 @@ $breakpoints: (
     }
   }
 }
+
+@mixin media-query-vertical($width, $height) {
+  @media (min-width: map-get($breakpoints, $width)) and (min-height: map-get($breakpoints, $height)) {
+    @content;
+  }
+}
