--- a/src/components/SectionProjectDetails/SectionProjectDetails.module.scss
+++ b/src/components/SectionProjectDetails/SectionProjectDetails.module.scss
@@ -1,43 +1,15 @@
 @import '../../sass/mixins/index';
 
 .project-details {
-  align-items: center;
-  display: flex;
-  gap: 4.2rem;
-  justify-content: space-between;
+  display: grid;
+  gap: 3rem;
   margin-bottom: 10rem;
 
-  &__list-wrapper {
-    background-color: var(--color-tertiary);
-    border-radius: 70px;
-    padding: 5.5rem 8.4rem;
-  }
-
-  &__list {
-    display: grid;
-    gap: 3rem;
-    @include reset-list-style;
-  }
-
-  &__list-item {
+  @include media-query('lg') {
+    align-items: center;
     display: flex;
-    gap: 5rem;
-
-    &__title {
-      font-family: var(--font-family-primary);
-      font-size: 2.2rem;
-      font-weight: 400;
-      min-width: 9.8rem;
-    }
-
-    &__text {
-      @include body-styles('large');
-    }
-
-    &__text,
-    &__title {
-      margin: 0;
-    }
+    gap: 4.2rem;
+    justify-content: space-between;
   }
 
   &__description {
@@ -51,6 +23,9 @@
 
     &__text {
       margin: 0;
+      vertical-align: bottom;
+      white-space: pre-line;
+
       @include body-styles('large');
     }
   }
