--- a/src/components/Hero/Hero.module.scss
+++ b/src/components/Hero/Hero.module.scss
@@ -59,3 +59,12 @@
     cursor: default;
   }
 }
+
+.blurhash {
+  height: 100% !important;
+  left: 0;
+  position: absolute !important;
+  top: 0;
+  width: 100% !important;
+  z-index: -1;
+}
