--- a/src/components/CustomLazyLoadImage/CustomLazyLoadImage.module.scss
+++ b/src/components/CustomLazyLoadImage/CustomLazyLoadImage.module.scss
@@ -7,7 +7,6 @@
   position: absolute;
   top: 0;
   width: 100%;
-  z-index: -1;
 }
 
 .blurhash {
@@ -16,12 +15,14 @@
   position: absolute !important;
   top: 0;
   width: 100% !important;
-  z-index: -1;
 }
 
 .blurhash,
 .image {
   left: 0;
   top: 0;
+}
+
+.minus-z-index {
   z-index: -1;
 }
