--- a/src/components/TeamMemberCard/TeamMemberCard.module.scss
+++ b/src/components/TeamMemberCard/TeamMemberCard.module.scss
@@ -57,7 +57,8 @@ $card-width: 28.3rem;
 }
 
 .card-front {
-  object-fit: cover;
+  height: 100%;
+  width: 100%;
 }
 
 .card-front,
@@ -65,6 +66,7 @@ $card-width: 28.3rem;
   backface-visibility: hidden;
   border-radius: 30px;
   left: 0;
+  overflow: hidden;
   position: absolute;
   top: 0;
 }
