--- a/src/components/TeamMemberCard/TeamMemberCard.module.scss
+++ b/src/components/TeamMemberCard/TeamMemberCard.module.scss
@@ -3,7 +3,6 @@
 $card-width: 28.3rem;
 
 .employee-card {
-  cursor: pointer;
   height: 43.3rem;
   position: relative;
   text-align: center;
@@ -59,6 +58,7 @@ $card-width: 28.3rem;
 .card-front {
   height: 100%;
   width: 100%;
+  z-index: -1;
 }
 
 .card-front,
