Updated Section Home projects

--- a/src/components/SectionHomeProjects/SectionHomeProjects.module.scss
+++ b/src/components/SectionHomeProjects/SectionHomeProjects.module.scss
@@ -37,7 +37,8 @@
 
   &__img {
     height: 40rem;
-    object-fit: cover;
+    overflow: hidden;
+    position: relative;
     width: 100%;
 
     @include media-query('lg') {
