--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -1,5 +1,23 @@
 @import '../../sass/mixins/index';
 
+@keyframes slide {
+  50% {
+    transform: translateX(10px);
+  }
+
+  100% {
+    transform: translate(0);
+  }
+}
+
+.image {
+  width: 1.5rem;
+
+  @include media-query('md') {
+    width: 1.9rem;
+  }
+}
+
 .button {
   align-items: center;
   background-color: var(--color-secondary);
@@ -10,6 +28,7 @@
   gap: 0.9rem;
   height: 4.5rem;
   padding: 0 3.5rem;
+  transition: background-color 0.7s linear;
 
   @include body-styles('small', $color: var(--color-white-100), $weight: 600);
 
@@ -23,21 +42,28 @@
     padding: 0 5.4rem;
   }
 
+  &:hover {
+    background-color: var(--btn-secondary);
+  }
+
+  &:hover .image {
+    animation: slide 0.7s ease-in-out;
+  }
+
+  .path {
+    stroke: var(--color-primary);
+
+    &__gold {
+      stroke: var(--color-secondary);
+    }
+  }
+
   &__gold {
     background-color: var(--color-primary);
     box-shadow: 0 10px 20px var(--color-dark-130);
-  }
-}
 
-.image {
-  stroke: var(--color-primary);
-  width: 1.5rem;
-
-  &__gold {
-    stroke: var(--color-secondary);
-  }
-
-  @include media-query('md') {
-    width: 1.9rem;
+    &:hover {
+      background-color: var(--btn-tertiary);
+    }
   }
 }
