--- a/src/components/CustomLink/CustomLink.module.scss
+++ b/src/components/CustomLink/CustomLink.module.scss
@@ -34,7 +34,14 @@
 
   &__icon {
     padding-left: 1.2rem;
-    stroke: var(--color-primary);
     width: auto;
+  }
+
+  &__path {
+    stroke: var(--color-primary);
+  }
+
+  &:hover &__icon {
+    @include arrow-slide-animation(0.7s);
   }
 }
