--- a/src/components/SectionProjectDetailsImage/SectionProjectDetailsImage.module.scss
+++ b/src/components/SectionProjectDetailsImage/SectionProjectDetailsImage.module.scss
@@ -1,5 +1,9 @@
 @import '../../sass/mixins/index';
 
+.modal-button__icon {
+  transition: width 0.2s linear, height 0.2s linear;
+}
+
 .modal-button {
   background-position: center;
   background-size: cover;
@@ -8,9 +12,15 @@
   height: 35rem;
   width: 100%;
 
+  &:hover &__icon {
+    height: 50%;
+    width: 50%;
+  }
+
   @include media-query('md') {
     height: 50rem;
   }
+
   @include media-query('xl') {
     height: 80rem;
   }
@@ -23,9 +33,5 @@
     width: 10rem;
 
     @include flex-center;
-    @include media-query('lg') {
-      height: 13.2rem;
-      width: 13.2rem;
-    }
   }
 }
