--- a/src/components/SectionProjectDetailsImage/SectionProjectDetailsImage.module.scss
+++ b/src/components/SectionProjectDetailsImage/SectionProjectDetailsImage.module.scss
@@ -13,8 +13,7 @@
   width: 100%;
 
   &:hover &__icon {
-    height: 50%;
-    width: 50%;
+    @include size-animation(3.7rem, $seconds: 0.7s);
   }
 
   @include media-query('md') {
